Add functionality to the opertation buttons
Allow the operation buttons to be added to the string if the screen is not
empty and an operation has not currently been selected.

--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body{
     border: 2px solid black;
 }
 .screen{
-    display: flex;
+    
+    
+    text-align: right;
     margin: 8px;
     padding: 10px;
     border-radius: 10%;
